force-app/main/default/objects/Case/fields/ACIS_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>ACIS_Case_Number__c</fullName>
    <label>ACIS Case Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>