force-app/main/default/objects/Case/fields/Agency_Case_2__c.field-meta.xml
<CustomField>
    <fullName>Agency_Case_2__c</fullName>
    <label>Agency Case #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>