force-app/main/default/objects/Case/fields/AI__c.field-meta.xml
<CustomField>
    <fullName>AI__c</fullName>
    <label>AI #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>