force-app/main/default/objects/Case/fields/ai_Departments_Engaged__c.field-meta.xml
<CustomField>
    <fullName>ai_Departments_Engaged__c</fullName>
    <label>Departments Engaged</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Legal Advocacy</fullName>
            </value>
            <value>
                <fullName>FIR</fullName>
            </value>
            <value>
                <fullName>Forensics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>