force-app/main/default/objects/Case/fields/ai_Types_of_Interaction__c.field-meta.xml
<CustomField>
    <fullName>ai_Types_of_Interaction__c</fullName>
    <label>Types of Interaction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advice/Touch</fullName>
            </value>
            <value>
                <fullName>Removal</fullName>
            </value>
            <value>
                <fullName>Scene Documentation</fullName>
            </value>
            <value>
                <fullName>Behavior Eval</fullName>
            </value>
            <value>
                <fullName>Legal Research</fullName>
            </value>
            <value>
                <fullName>Draft Search Warrant</fullName>
            </value>
            <value>
                <fullName>Draft Brief</fullName>
            </value>
            <value>
                <fullName>Sentencing Memo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>