force-app/main/default/objects/Case/fields/Alleged_Incident__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Incident__c</fullName>
    <inlineHelpText>Enter the date and time of the alleged incident</inlineHelpText>
    <label>Alleged Incident</label>
    <type>DateTime</type>
</CustomField>