force-app/main/default/objects/Case/fields/Animal_AAH_s__c.field-meta.xml
<CustomField>
    <fullName>Animal_AAH_s__c</fullName>
    <label>Animal AAH #(s)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>