force-app/main/default/objects/Case/fields/Animal_Breed_from_TIP_details__c.field-meta.xml
<CustomField>
    <fullName>Animal_Breed_from_TIP_details__c</fullName>
    <label>Animal Breed (from Intel details)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>