force-app/main/default/objects/Case/fields/Animal_Live_or_Dead_Status_es__c.field-meta.xml
<CustomField>
    <fullName>Animal_Live_or_Dead_Status_es__c</fullName>
    <label>Animal Live or Dead Status(es)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>