force-app/main/default/objects/Case/fields/Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name__c</fullName>
    <label>Animal Name(s)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>