force-app/main/default/objects/Case/fields/Animal_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name_s__c</fullName>
    <label>Animal Name(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>