force-app/main/default/objects/Case/fields/Arrest__c.field-meta.xml
<CustomField>
    <fullName>Arrest__c</fullName>
    <label>Arrest #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>