force-app/main/default/objects/Case/fields/Arrest_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrest_Date__c</fullName>
    <label>Arrest Date</label>
    <summarizedField>Charge_Information__c.Arrest_Charge_s_Filed_Date__c</summarizedField>
    <summaryForeignKey>Charge_Information__c.Case__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>