force-app/main/default/objects/Case/fields/Arrest_Status__c.field-meta.xml
<CustomField>
    <fullName>Arrest_Status__c</fullName>
    <formula>CASE(Status,&quot;Closed - Arrest&quot;,&quot;Arrest&quot;,&quot;Closed - No Arrest&quot;,&quot;No Arrest&quot;,&quot;&quot;)</formula>
    <label>Arrest Status</label>
    <type>Text</type>
</CustomField>