force-app/main/default/objects/Case/fields/ASPCA_Liaison__c.field-meta.xml
<CustomField>
    <fullName>ASPCA_Liaison__c</fullName>
    <label>ASPCA Liaison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>