force-app/main/default/objects/Case/fields/Behavior_Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Placement_Status__c</fullName>
    <label>Behavior Placement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Placement</fullName>
            </value>
            <value>
                <fullName>Behavior Hold</fullName>
            </value>
            <value>
                <fullName>Rehab Candidate</fullName>
            </value>
            <value>
                <fullName>Placement Partner OK - Foster-based Rescue</fullName>
            </value>
            <value>
                <fullName>Placement Partner OK - Foster</fullName>
            </value>
            <value>
                <fullName>Placement Partner OK - Shelter with Behavior Dept.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>