force-app/main/default/objects/Case/fields/Borough__c.field-meta.xml
<CustomField>
    <fullName>Borough__c</fullName>
    <formula>IF(Precinct__c &lt; 40, &apos;Manhattan&apos;,
IF(Precinct__c &lt; 60, &apos;Bronx&apos;,
IF(Precinct__c &lt; 100, &apos;Brooklyn&apos;,
IF(Precinct__c &lt; 120, &apos;Queens&apos;,
IF(Precinct__c &lt;=123, &apos;Staten Island&apos;,&apos;&apos;)))))</formula>
    <label>Borough</label>
    <type>Text</type>
</CustomField>