force-app/main/default/objects/Case/fields/Borough_Liaison__c.field-meta.xml
<CustomField>
    <fullName>Borough_Liaison__c</fullName>
    <label>Borough Liaison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>