force-app/main/default/objects/Case/fields/Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Call_Center__c</fullName>
    <label>Call Center #</label>
    <length>12</length>
    <type>Text</type>
</CustomField>