force-app/main/default/objects/Case/fields/Case_Box_Link__c.field-meta.xml
<CustomField>
    <fullName>Case_Box_Link__c</fullName>
    <label>Case Box Link</label>
    <type>Url</type>
</CustomField>