force-app/main/default/objects/Case/fields/Case_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Initiated_By__c</fullName>
    <label>Case Initiated By</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Initiated_By_Partner__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NYPD</fullName>
            </value>
            <value>
                <fullName>ADA</fullName>
            </value>
            <value>
                <fullName>AAH</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>AMC</fullName>
            </value>
            <value>
                <fullName>Blue Pearl BK</fullName>
            </value>
            <value>
                <fullName>Blue Pearl D</fullName>
            </value>
            <value>
                <fullName>Blue Pearl M</fullName>
            </value>
            <value>
                <fullName>Blue Pearl Q</fullName>
            </value>
            <value>
                <fullName>GSIVS</fullName>
            </value>
            <value>
                <fullName>VEG</fullName>
            </value>
            <value>
                <fullName>VERG</fullName>
            </value>
            <value>
                <fullName>VERG North</fullName>
            </value>
            <value>
                <fullName>VERG South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>