force-app/main/default/objects/Case/fields/Case_Initiated_By_Partner__c.field-meta.xml
<CustomField>
    <fullName>Case_Initiated_By_Partner__c</fullName>
    <label>Case Initiated By Partner?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>