force-app/main/default/objects/Case/fields/Case_Initiation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Case_Initiation_Notes__c</fullName>
    <label>Case Initiation Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>