force-app/main/default/objects/Case/fields/Case_Phase__c.field-meta.xml
<CustomField>
    <fullName>Case_Phase__c</fullName>
    <label>Case Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>