force-app/main/default/objects/Case/fields/CASE_STATUS_SUBTYPE__c.field-meta.xml
<CustomField>
    <fullName>CASE_STATUS_SUBTYPE__c</fullName>
    <label>Case Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case Review</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Court Charges Filed</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Forensic Analysis</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Emergency Sheltering</fullName>
            </value>
            <value>
                <fullName>Supply Request</fullName>
            </value>
            <value>
                <fullName>Crime Scene Assistance</fullName>
            </value>
            <value>
                <fullName>Case Packaging</fullName>
            </value>
            <value>
                <fullName>Expert Testimony</fullName>
            </value>
            <value>
                <fullName>General Case Consultation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>