force-app/main/default/objects/Case/fields/Case_Summary_Preview__c.field-meta.xml
<CustomField>
    <fullName>Case_Summary_Preview__c</fullName>
    <label>Case Summary Preview</label>
    <type>TextArea</type>
</CustomField>