force-app/main/default/objects/Case/fields/Case_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Other__c</fullName>
    <label>Case Type Other</label>
    <type>TextArea</type>
</CustomField>