force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Investigations - Consultation</fullName>
            </value>
            <value>
                <fullName>Investigations - Complaint</fullName>
            </value>
            <value>
                <fullName>Investigations - Proactive</fullName>
            </value>
            <value>
                <fullName>Expert Services - Legal Review</fullName>
            </value>
            <value>
                <fullName>Expert Services - Subject Matter</fullName>
            </value>
            <value>
                <fullName>Expert Services - Forensic Science</fullName>
            </value>
            <value>
                <fullName>Sheltering Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>