force-app/main/default/objects/Case/fields/Child_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Child_Abuse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Abuse</label>
    <type>Checkbox</type>
</CustomField>