force-app/main/default/objects/Case/fields/Civicore_Link__c.field-meta.xml
<CustomField>
    <fullName>Civicore_Link__c</fullName>
    <label>Civicore Link</label>
    <type>Url</type>
</CustomField>