force-app/main/default/objects/Case/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>B1 EDP/Aided</fullName>
            </value>
            <value>
                <fullName>B3 All Court Ref.</fullName>
            </value>
            <value>
                <fullName>B4 Non-Crim Inv.</fullName>
            </value>
            <value>
                <fullName>B5 Ref. to other unit</fullName>
            </value>
            <value>
                <fullName>B6 Unfounded</fullName>
            </value>
            <value>
                <fullName>B7 Inaccurate facts</fullName>
            </value>
            <value>
                <fullName>B8 Enhancements</fullName>
            </value>
            <value>
                <fullName>B9 Improper Ref.</fullName>
            </value>
            <value>
                <fullName>C1 Prop. Crime Only</fullName>
            </value>
            <value>
                <fullName>C2 Comp. Witness unable to ID perp</fullName>
            </value>
            <value>
                <fullName>C3 Uncoop. Complainant</fullName>
            </value>
            <value>
                <fullName>C4 Inv. Leads Exhausted</fullName>
            </value>
            <value>
                <fullName>C12 Only 1 Perp and Perp-Prob</fullName>
            </value>
            <value>
                <fullName>Closed - No Reason Given</fullName>
            </value>
            <value>
                <fullName>Closed to Patrol</fullName>
            </value>
            <value>
                <fullName>Exceptional Clearance</fullName>
            </value>
            <value>
                <fullName>I Card Issued</fullName>
            </value>
            <value>
                <fullName>Insufficient Evidence</fullName>
            </value>
            <value>
                <fullName>Non Crime</fullName>
            </value>
            <value>
                <fullName>Not enough information</fullName>
            </value>
            <value>
                <fullName>Owner complied</fullName>
            </value>
            <value>
                <fullName>Referred to local agency</fullName>
            </value>
            <value>
                <fullName>Referred to other dept.</fullName>
            </value>
            <value>
                <fullName>Source stopped communications</fullName>
            </value>
            <value>
                <fullName>Surrendered animals</fullName>
            </value>
            <value>
                <fullName>Unable to locate</fullName>
            </value>
            <value>
                <fullName>Uncooperative agency</fullName>
            </value>
            <value>
                <fullName>Uncooperative complainant</fullName>
            </value>
            <value>
                <fullName>Unfounded</fullName>
            </value>
            <value>
                <fullName>Convicted - See Charge Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>