force-app/main/default/objects/Case/fields/Consultant_Fees__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Fees__c</fullName>
    <label>Consultant Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>