force-app/main/default/objects/Case/fields/Current_Animal_Status_es__c.field-meta.xml
<CustomField>
    <fullName>Current_Animal_Status_es__c</fullName>
    <label>Current Animal Status(es)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>