force-app/main/default/objects/Case/fields/Date_of_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Complaint__c</fullName>
    <label>Date of Complaint</label>
    <type>Date</type>
</CustomField>