force-app/main/default/objects/Case/fields/Date_Search_Warrant_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Date_Search_Warrant_Obtained__c</fullName>
    <label>Date Search Warrant Obtained</label>
    <type>Date</type>
</CustomField>