force-app/main/default/objects/Case/fields/Defendant__c.field-meta.xml
<CustomField>
    <fullName>Defendant__c</fullName>
    <label>Defendant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>