force-app/main/default/objects/Case/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if this case is counted as a deployment.</inlineHelpText>
    <label>Deployment</label>
    <type>Checkbox</type>
</CustomField>