force-app/main/default/objects/Case/fields/Deployment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_End_Date__c</fullName>
    <inlineHelpText>Date that sheltering operations or deployment wrapped up.</inlineHelpText>
    <label>Deployment End Date</label>
    <type>Date</type>
</CustomField>