force-app/main/default/objects/Case/fields/Deployment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Start_Date__c</fullName>
    <inlineHelpText>Date of seizure</inlineHelpText>
    <label>Deployment Start Date</label>
    <type>Date</type>
</CustomField>