force-app/main/default/objects/Case/fields/DIR_Report__c.field-meta.xml
<CustomField>
    <fullName>DIR_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DIR Report</label>
    <type>Checkbox</type>
</CustomField>