force-app/main/default/objects/Case/fields/Docket__c.field-meta.xml
<CustomField>
    <fullName>Docket__c</fullName>
    <label>Docket #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>