force-app/main/default/objects/Case/fields/DV_Count__c.field-meta.xml
<CustomField>
    <fullName>DV_Count__c</fullName>
    <formula>IF( DV_Involvement__c , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DV Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>