force-app/main/default/objects/Case/fields/DV_Involvement__c.field-meta.xml
<CustomField>
    <fullName>DV_Involvement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DV Involvement</label>
    <type>Checkbox</type>
</CustomField>