force-app/main/default/objects/Case/fields/DV_Text__c.field-meta.xml
<CustomField>
    <fullName>DV_Text__c</fullName>
    <formula>IF( DV_Involvement__c , &apos;True&apos;, &apos;False&apos;)</formula>
    <label>DV Text</label>
    <type>Text</type>
</CustomField>