force-app/main/default/objects/Case/fields/Facility_Cost__c.field-meta.xml
<CustomField>
    <fullName>Facility_Cost__c</fullName>
    <label>Facility Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>