force-app/main/default/objects/Case/fields/Final_Report_FWD__c.field-meta.xml
<CustomField>
    <fullName>Final_Report_FWD__c</fullName>
    <label>Final Report FWD</label>
    <type>Date</type>
</CustomField>