force-app/main/default/objects/Case/fields/Forensics_Case__c.field-meta.xml
<CustomField>
    <fullName>Forensics_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forensics Case</label>
    <type>Checkbox</type>
</CustomField>