force-app/main/default/objects/Case/fields/Gas_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Gas_Expenses__c</fullName>
    <label>Gas Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>