force-app/main/default/objects/Case/fields/Has_Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Has_Primary_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that only gets checked once Primary Location is selected</description>
    <inlineHelpText>You must go to the Scene Locations and add a Location.</inlineHelpText>
    <label>Has Primary Location</label>
    <type>Checkbox</type>
</CustomField>