force-app/main/default/objects/Case/fields/Indictment__c.field-meta.xml
<CustomField>
    <fullName>Indictment__c</fullName>
    <label>Indictment #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>