force-app/main/default/objects/Case/fields/Intelligence_Report__c.field-meta.xml
<CustomField>
    <fullName>Intelligence_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intelligence Report ID</label>
    <referenceTo>Tips_Intel__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>