force-app/main/default/objects/Case/fields/Investigator__c.field-meta.xml
<CustomField>
    <fullName>Investigator__c</fullName>
    <label>Case Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Kyle Held</fullName>
            </value>
            <value>
                <fullName>Terry Mills</fullName>
            </value>
            <value>
                <fullName>Leigh Anne Wilson</fullName>
            </value>
            <value>
                <fullName>Donna Lassa</fullName>
            </value>
            <value>
                <fullName>Teresa Ladner</fullName>
            </value>
            <value>
                <fullName>Nathan Zilak</fullName>
            </value>
            <value>
                <fullName>Rachel Touroo, DVM</fullName>
            </value>
            <value>
                <fullName>Alison Kennedy-Benson</fullName>
            </value>
            <value>
                <fullName>Amanda Fitch</fullName>
            </value>
            <value>
                <fullName>Elizabeth Pearlman, DVM</fullName>
            </value>
            <value>
                <fullName>Kristina Baucom, DVM</fullName>
            </value>
            <value>
                <fullName>Ashley Saver, DVM</fullName>
            </value>
            <value>
                <fullName>Tim Perciful</fullName>
            </value>
            <value>
                <fullName>Tim Rickey</fullName>
            </value>
            <value>
                <fullName>Susan Anderson</fullName>
            </value>
            <value>
                <fullName>Wanda Merling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>