force-app/main/default/objects/Case/fields/Juvenile_Case__c.field-meta.xml
<CustomField>
    <fullName>Juvenile_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Juvenile Case</label>
    <type>Checkbox</type>
</CustomField>