force-app/main/default/objects/Case/fields/Lead_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Lead_Attorney__c</fullName>
    <label>Lead Attorney</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Donna Lassa</fullName>
            </value>
            <value>
                <fullName>Elizabeth Brandler</fullName>
            </value>
            <value>
                <fullName>Erin Satterthwaite</fullName>
            </value>
            <value>
                <fullName>Jennifer Chin</fullName>
            </value>
            <value>
                <fullName>Natasha Major</fullName>
            </value>
            <value>
                <fullName>Nathan Zilak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>