force-app/main/default/objects/Case/fields/Lead_Forensic_Veterinarian__c.field-meta.xml
<CustomField>
    <fullName>Lead_Forensic_Veterinarian__c</fullName>
    <label>Lead Forensic Veterinarian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Necropsy_Veterinarians</valueSetName>
    </valueSet>
</CustomField>