force-app/main/default/objects/Case/fields/Lead_Veterinarian__c.field-meta.xml
<CustomField>
    <fullName>Lead_Veterinarian__c</fullName>
    <label>Lead Veterinarian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>JB</fullName>
            </value>
            <value>
                <fullName>LNN</fullName>
            </value>
            <value>
                <fullName>RR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>