force-app/main/default/objects/Case/fields/Next_Court_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Court_Date__c</fullName>
    <label>Next Court Date</label>
    <type>Date</type>
</CustomField>