force-app/main/default/objects/Case/fields/Next_Update_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Next_Update_Reminder__c</fullName>
    <label>Next Update Reminder</label>
    <type>Date</type>
</CustomField>