force-app/main/default/objects/Case/fields/NYPD_Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>NYPD_Complaint_Number__c</fullName>
    <label>NYPD Complaint Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>